Fixed footer spacing issue

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -160,6 +160,12 @@ span {
     padding-bottom: 10%;
 }
 
+.footerSpacing {
+    font-family: 'Roboto', sans-serif;
+    font-size: 3vh;
+    font-weight: 400;
+}
+
 
 
 .grayBackground {
